--- a/html/partido-politico1.html
+++ b/html/partido-politico1.html
@@ -163,7 +163,7 @@
                 { name: "FUERZA POPULAR", logo: "FUERZA POPULAR.png" },
                 { name: "PARTIDO HUMANISTA PERUANO", logo: "PARTIDOHUMANISTAPERUANO.png" },
                 { name: "PARTIDO POPULAR CRISTIANO - PPC", logo: "PARTIDO POPULAR CRISTIANO - PPC.png" },
-                { name: "ACCIÓN POPULAR", logo: "AcciónPopular.svg.png" } // Añadido el partido Acción Popular
+                { name: "ACCIÓN POPULAR", logo: "AcciónPopular.svg.png" } 
             ];
 
             const grid = document.getElementById('party-grid');
@@ -282,4 +282,5 @@
         });
     </script>
     </body>
+
 </html>
