--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <a href="html/calendario.html" class="text-sm font-medium text-light-text-secondary dark:text-dark-text-secondary hover:text-primary dark:hover:text-primary transition-colors">Calendario</a>
             <a href="html/candidatos.html" class="text-sm font-medium text-light-text-secondary dark:text-dark-text-secondary hover:text-primary dark:hover:text-primary transition-colors">Candidatos</a>
             <a href="html/partido-politico.html" class="text-sm font-medium text-light-text-secondary dark:text-dark-text-secondary hover:text-primary dark:hover:text-primary transition-colors">Partido Político</a>
+            <a href="html/donde-voto.html" class="text-sm font-medium text-light-text-secondary dark:text-dark-text-secondary hover:text-primary dark:hover:text-primary transition-colors">¿Dónde Voto?</a>
             <a href="html/noticias.html" class="text-sm font-medium text-light-text-secondary dark:text-dark-text-secondary hover:text-primary dark:hover:text-primary transition-colors">Noticias</a>
             <a href="#" class="text-sm font-medium text-light-text-secondary dark:text-dark-text-secondary hover:text-primary dark:hover:text-primary transition-colors">Idioma</a>
           </nav>
@@ -92,6 +93,7 @@
           <a href="html/calendario.html" class="block px-3 py-2 rounded-md text-base font-medium text-light-text-secondary dark:text-dark-text-secondary hover:bg-gray-200 dark:hover:bg-gray-700 hover:text-primary dark:hover:text-primary transition-colors">Calendario</a>
           <a href="html/candidatos.html" class="block px-3 py-2 rounded-md text-base font-medium text-light-text-secondary dark:text-dark-text-secondary hover:bg-gray-200 dark:hover:bg-gray-700 hover:text-primary dark:hover:text-primary transition-colors">Candidatos</a>
           <a href="html/partido-politico.html" class="block px-3 py-2 rounded-md text-base font-medium text-light-text-secondary dark:text-dark-text-secondary hover:bg-gray-200 dark:hover:bg-gray-700 hover:text-primary dark:hover:text-primary transition-colors">Partido Político</a>
+          <a href="html/donde-voto.html" class="block px-3 py-2 rounded-md text-base font-medium text-light-text-secondary dark:text-dark-text-secondary hover:bg-gray-200 dark:hover:bg-gray-700 hover:text-primary dark:hover:text-primary transition-colors">¿Dónde Voto?</a>
           <a href="html/noticias.html" class="block px-3 py-2 rounded-md text-base font-medium text-light-text-secondary dark:text-dark-text-secondary hover:bg-gray-200 dark:hover:bg-gray-700 hover:text-primary dark:hover:text-primary transition-colors">Noticias</a>
           <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-light-text-secondary dark:text-dark-text-secondary hover:bg-gray-200 dark:hover:bg-gray-700 hover:text-primary dark:hover:text-primary transition-colors">Idioma</a>
         </div>
@@ -128,6 +130,10 @@
                         <div class="bg-black/70 p-4 rounded-lg w-20 sm:w-28 flex flex-col items-center justify-center">
                             <span id="minutes" class="text-3xl sm:text-5xl font-bold text-white">00</span>
                             <span class="text-xs sm:text-sm uppercase text-gray-300">Minutos</span>
+                        </div>
+                        <div class="bg-black/70 p-4 rounded-lg w-20 sm:w-28 flex flex-col items-center justify-center">
+                            <span id="seconds" class="text-3xl sm:text-5xl font-bold text-white">00</span>
+                            <span class="text-xs sm:text-sm uppercase text-gray-300">Segundos</span>
                         </div>
                     </div>
                 </div>
@@ -244,49 +250,59 @@
                 
                 <section class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-start">
                     <div class="w-full">
-                        <h2 class="text-2xl font-bold mb-6">RANKING DE CANDIDATOS</h2>
+                        <h2 class="text-2xl font-bold mb-2">📊 RANKING DE CANDIDATOS</h2>
+                        <p class="text-light-text-secondary dark:text-dark-text-secondary mb-6 text-sm">Simulación basada en Ipsos Perú - Intención de Voto para Plancha Presidencial</p>
                         <div class="space-y-3">
-                            <div class="bg-light-bg-secondary dark:bg-dark-bg-secondary rounded-lg p-3 flex items-center space-x-4">
-                                <div class="bg-blue-100 dark:bg-blue-900 text-blue-600 dark:text-blue-300 w-8 h-8 rounded-full flex items-center justify-center font-bold">2</div>
+                            <div class="bg-light-bg-secondary dark:bg-dark-bg-secondary rounded-lg p-3 flex items-center space-x-4 border-l-4 border-yellow-400">
+                                <div class="text-2xl">🥇</div>
                                 <div class="flex-grow">
-                                    <p class="font-bold">Carlos Méndez</p>
-                                    <p class="text-sm text-light-text-secondary dark:text-dark-text-secondary">Partido Nacional</p>
+                                    <p class="font-bold">Julio Casas</p>
+                                    <p class="text-sm text-light-text-secondary dark:text-dark-text-secondary">Fuerza Popular</p>
                                 </div>
-                                <p class="font-semibold">38%</p>
-                                <div class="px-2 py-1 text-xs font-bold rounded bg-green-100 dark:bg-green-900 text-green-600 dark:text-green-300">+1.2%</div>
+                                <p class="font-semibold text-primary">38%</p>
+                                <div class="px-2 py-1 text-xs font-bold rounded bg-green-100 dark:bg-green-900 text-green-600 dark:text-green-300">+2.1%</div>
                             </div>
-                            <div class="bg-light-bg-secondary dark:bg-dark-bg-secondary rounded-lg p-3 flex items-center space-x-4">
-                                <div class="bg-blue-100 dark:bg-blue-900 text-blue-600 dark:text-blue-300 w-8 h-8 rounded-full flex items-center justify-center font-bold">3</div>
+                            <div class="bg-light-bg-secondary dark:bg-dark-bg-secondary rounded-lg p-3 flex items-center space-x-4 border-l-4 border-gray-400">
+                                <div class="text-2xl">🥈</div>
                                 <div class="flex-grow">
-                                    <p class="font-bold">Ana Rodríguez</p>
-                                    <p class="text-sm text-light-text-secondary dark:text-dark-text-secondary">Frente Democrático</p>
+                                    <p class="font-bold">Martina Guerra</p>
+                                    <p class="text-sm text-light-text-secondary dark:text-dark-text-secondary">Alianza para el Progreso</p>
                                 </div>
-                                <p class="font-semibold">32%</p>
+                                <p class="font-semibold text-primary">32%</p>
                                 <div class="px-2 py-1 text-xs font-bold rounded bg-red-100 dark:bg-red-900 text-red-500 dark:text-red-300">-0.5%</div>
                             </div>
-                            <div class="bg-light-bg-secondary dark:bg-dark-bg-secondary rounded-lg p-3 flex items-center space-x-4">
+                            <div class="bg-light-bg-secondary dark:bg-dark-bg-secondary rounded-lg p-3 flex items-center space-x-4 border-l-4 border-orange-400">
+                                <div class="text-2xl">🥉</div>
+                                <div class="flex-grow">
+                                    <p class="font-bold">Franco Sifuentes</p>
+                                    <p class="text-sm text-light-text-secondary dark:text-dark-text-secondary">Perú Libre</p>
+                                </div>
+                                <p class="font-semibold text-primary">28%</p>
+                                <div class="px-2 py-1 text-xs font-bold rounded bg-green-100 dark:bg-green-900 text-green-600 dark:text-green-300">+1.8%</div>
+                            </div>
+                            <div class="bg-light-bg-secondary dark:bg-dark-bg-secondary rounded-lg p-3 flex items-center space-x-4 border-l-4 border-blue-400">
                                 <div class="bg-blue-100 dark:bg-blue-900 text-blue-600 dark:text-blue-300 w-8 h-8 rounded-full flex items-center justify-center font-bold">4</div>
                                 <div class="flex-grow">
-                                    <p class="font-bold">Pedro López</p>
-                                    <p class="text-sm text-light-text-secondary dark:text-dark-text-secondary">Alianza por el Cambio</p>
+                                    <p class="font-bold">Daniela Montes</p>
+                                    <p class="text-sm text-light-text-secondary dark:text-dark-text-secondary">Renovación Popular</p>
                                 </div>
-                                <p class="font-semibold">42%</p>
-                                <div class="px-2 py-1 text-xs font-bold rounded bg-green-100 dark:bg-green-900 text-green-600 dark:text-green-300">+3.1%</div>
+                                <p class="font-semibold text-primary">25%</p>
+                                <div class="px-2 py-1 text-xs font-bold rounded bg-red-100 dark:bg-red-900 text-red-500 dark:text-red-300">-1.5%</div>
                             </div>
-                            <div class="bg-light-bg-secondary dark:bg-dark-bg-secondary rounded-lg p-3 flex items-center space-x-4">
+                            <div class="bg-light-bg-secondary dark:bg-dark-bg-secondary rounded-lg p-3 flex items-center space-x-4 border-l-4 border-purple-400">
                                 <div class="bg-blue-100 dark:bg-blue-900 text-blue-600 dark:text-blue-300 w-8 h-8 rounded-full flex items-center justify-center font-bold">5</div>
                                 <div class="flex-grow">
-                                    <p class="font-bold">María Fernández</p>
-                                    <p class="text-sm text-light-text-secondary dark:text-dark-text-secondary">Partido Progresista</p>
+                                    <p class="font-bold">Roberto Paz</p>
+                                    <p class="text-sm text-light-text-secondary dark:text-dark-text-secondary">Somos Perú</p>
                                 </div>
-                                <p class="font-semibold">49%</p>
-                                <div class="px-2 py-1 text-xs font-bold rounded bg-red-100 dark:bg-red-900 text-red-500 dark:text-red-300">-2.5%</div>
+                                <p class="font-semibold text-primary">18%</p>
+                                <div class="px-2 py-1 text-xs font-bold rounded bg-green-100 dark:bg-green-900 text-green-600 dark:text-green-300">+0.9%</div>
                             </div>
                         </div>
-                        <button class="mt-6 w-full bg-gray-900 dark:bg-gray-200 text-white dark:text-gray-900 font-bold py-3 rounded-lg hover:bg-gray-700 dark:hover:bg-white transition-colors">
+                        <a href="html/ranking-candidatos.html" class="mt-6 block w-full bg-gray-900 dark:bg-gray-200 text-white dark:text-gray-900 font-bold py-3 rounded-lg hover:bg-gray-700 dark:hover:bg-white transition-colors text-center">
                             Ver ranking Completo
-                        </button>
-                        <p class="text-center text-sm text-light-text-secondary dark:text-dark-text-secondary mt-2">Actualizado hace 1 hora</p>
+                        </a>
+                        <p class="text-center text-sm text-light-text-secondary dark:text-dark-text-secondary mt-2">⏱️ Actualizado el 16 de noviembre de 2025</p>
                     </div>
 
                     <div class="w-full">
