--- a/html/noticias.html
+++ b/html/noticias.html
@@ -55,7 +55,7 @@
       <div class="container mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex items-center justify-between h-20">
           <div class="flex-shrink-0">
-            <a href="index.html" class="flex flex-col items-start">
+            <a href="../index.html" class="flex flex-col items-start">
               <span class="font-bold text-xl text-primary tracking-tight">ELECCIONES PERÚ 2026</span>
               <span class="text-xs text-light-text-secondary dark:text-dark-text-secondary">Infórmate Perú</span>
             </a>
